fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -35,8 +35,12 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    width: 45vwin;
+    width: 45vmin;
     flex: 1;
+    align-content: center;
+    justify-content: center;
+    padding: 10px;
+    margin: auto;
 }
 
 ul {
@@ -88,7 +92,7 @@ h2 {
 
 .container {
     margin: 50px;
-    height: 350px;
+    height: auto;
     width: 60vmin;
     max-width: 700px;
     padding: 30px 0px;
@@ -101,6 +105,7 @@ h2 {
     font-size: 13px;
     text-align: justify;
     width: inherit;
+    height: 30vmin;
     padding: 30px;
     margin: auto;
 }
